# shared-vds

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.ru.md  index.html  manifest  package.json  testing_plan.md
.github/workflows/: release.yml
docs/release/: review-template.md  review-v0.9.4.md  review-v0.9.5.md  review-v0.9.6.md
rules/: release.rule.md
scripts/: before-tauri-build.mjs  build-release-macos.sh  build-release.mjs  create-updater-latest-json.sh  postprocess-macos-release.sh
src/: index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/commands/: mod.rs  server_session.rs  settings_window.rs
src/components/: TitleBar.tsx
src/lib/: i18n.ts  logger.ts  serverSessionClient.ts  settingsEvents.ts  store.ts  terminalPicker.test.ts  terminalPicker.ts  theme.ts
src/windows/settings/: SettingsApp.tsx
src/windows/settings/tabs/: ProxyTab.tsx  SettingsTab.tsx
